<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bt_not_enabled_leaving">User declined to enable Bluetooth, exiting Bluetooth Advertisements.</string>
    <string name="activity_main_title">Ble Contact Tracing</string>
    <string name="start_advertising">Start Application</string>

    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>

    <string name="refresh">Refresh</string>
    <string name="next_page">Next Page</string>

    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">Advertising not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>

    <string name="Scan_start_error_prefix">Start Scanning failed: </string>
    <string name="Scan_start_error_already_started">Scanning already started.</string>
    <string name="Scan_start_error_registration_failed">App cannot be registered.</string>
    <string name="Scan_start_error_unsupported">Scan not supported on this device.</string>
    <string name="Scan_start_error_internal">internal error.</string>


    <string name="bt_null">Error: Bluetooth object null</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="currentOutbreak">Symptoms Of Current Outbreak</string>
    <string name="statusReport">Report Positive Case</string>
    <string name="noExposures">Exposures</string>
    <string name="buttonReport">Now Sick Change Status</string>
    <string name="report_positive_case">Your Current Status is </string>
    <string name="Symptoms">Symptoms</string>
    <string name="StatusCheck">Status</string>
    <string name="Reports">Statistics</string>
    <string name="confirmationNumber">Confirmation Number</string>
    <string name="getConNumber">From your test results
        Enter the confirmation number provided</string>
    <string name="Intro">If Smartphones with this app are in close Proximity,this Interaction will be recorded on your device. </string>
    <string name="NumberofExposee">No of People
        You have been Exposed to</string>
    <string name="NtoP">Now well Change Status</string>
    <string name="NumberofCases">Number of Cases You have experienced</string>
    <string name="NumberofVictims">Number of people you have Exposed</string>

    // Symptoms
    <string name="covid">CoronaVirus</string>
    <string name="covidSym">Coomon Symptoms : Loss of taste or smell,Nasal congestion,
        Conjunctivitis,Sore throat,Headache,Muscle or joint pain,
        Different types of skin rash,Nausea or vomitting,Diarrhea,Chills or dizziness</string>
    <string name="covidSevere">Severe Symptoms : Shortness of breath,Loss of appetite,Confusion,Persistent pain or
        pressure in the chest,High body temperature(above 38 c)</string>
    <string name="TB">TuberCulosis</string>
    <string name="Ebola">Ebola</string>
    <string name="ebolaSym">Symptoms: fever (greater than 101.5°F), severe headache, muscle pain, weakness,
        diarrhea, vomiting, stomach pain, and unexplained bleeding or bruising.</string>
    <string name="Diptheria">Diptheria</string>
    <string name="dipSym">Early Symptoms : sore throat and fever</string>
    <string name="dpSevere">Severe Symptoms:  enlarged lymph nodes (swollen glands),skin lesions that may be painful, red, and swollen</string>
    <string name="TBSym">Common Symptoms : weakness or fatigue,no appetite,chills,fever</string>
    <string name="TBSevere">Severe Symptoms : Cough with Sputum and blood at times,Chest pains,Weakness,Weight loss Fever Night sweats</string>
    <string name="flu">Flu (Influenza)</string>
    <string name="flSym">Common Symptoms : Fever Aches (muscle, body, and headaches) Chills Tiredness (fatigue) Sudden onset Cough, runny or stuffy nose, and/or sore throat</string>
    <string name="flSevere">Severe Symptoms : Vomiting and diarrhea (more common in children than adults)</string>
    <string name="Cholera">Cholera</string>
    <string name="chSym">Common Symptoms : profuse watery diarrhea, sometimes described as “rice-water stools” vomiting</string>
    <string name="chSevere">Severe Symptoms : leg cramps restlessness or irritability,dry mucous membranes low blood pressure, Severe dehydration can cause death</string>


</resources>